// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentBlock component does not include SectionHeader when there's no title 1`] = `
<div
  className="content-block"
>
  <div
    className="margin-horizontal-md"
  >
    <Figure
      alignment="right-collapse"
      alt="content-block"
      image="image.com"
      imageClassName={null}
      size="one-third"
    >
      <Markdown
        className={null}
      >
        Test Content
      </Markdown>
    </Figure>
  </div>
</div>
`;

exports[`ContentBlock component is rendered with the proper child components when image is set 1`] = `
<div
  className="content-block"
>
  <div
    className="margin-horizontal-md"
  >
    <SectionHeader
      hideStepNumber={true}
      preTitle="Test Super Title"
      step={null}
      title="Test Title"
    />
  </div>
  <div
    className="margin-horizontal-md"
  >
    <Figure
      alignment="right-collapse"
      alt="content-block"
      image="image.com"
      imageClassName={null}
      size="one-third"
    >
      <Markdown
        className={null}
      >
        Test Content
      </Markdown>
    </Figure>
  </div>
</div>
`;

exports[`ContentBlock component it works beautifully with a mere content prop 1`] = `
<div
  className="content-block"
>
  <div
    className="margin-horizontal-md"
  >
    <Markdown
      className={null}
    >
      hi there
    </Markdown>
  </div>
</div>
`;
